# CINF103

./: .gitignore  README.md  requirements.txt
ajedrez/: pieza.py  tablero1.txt
bayes/: analisis.ipynb  analisis_ejemplo.ipynb  dataset.csv  dataset.xlsx  dataset_base.csv  dataset_ejemplo_40_3.csv  dataset_ejemplo_40_3_16.csv  gen_dataset.py
bayes_base/: dataset_ejemplo.csv  dataset_ejemplo_40.csv
fractal/: f1.jl
fuzzy/: plot_tipping_problem.py
ga/: annealing.py  evolution.csv  evolution_optimo.csv  genetico.py  individuo.py  individuo_8reinas.py  individuo_tsp.py  problema_8reinas.py  problema_tsp.py
ga_base/: evolution.csv  genetico.py  individuo_8reinas.py
gato/: aisearch.py  gato.psd  gato_ui.py  raton.psd
gato_base/: aisearch.py  gato_ui.py  vacio.psd
juegos/8reinas_inicial/: 8reinas.py
juegos/ajedrez/: ajedrez.py  tablero.txt  tablero.xlsx
juegos/buscaminas/buscaminas_inicial/: buscaminas.py
juegos/buscaminas/buscaminas_terminado/: buscaminas.py
logica/: caminos.pl  factorial.pl  starcraft.pl
logica/8reinas/: 8reinas.pl
logica/animales/: animales.pl
logica/aves/: aves.pl
logica/ciberseguridad/: seguro.pl
logica/clips/: covid19.clp
logica/gato/: gato_version1.pl  gato_version2.pl
logica/parientes/: conoce.pl  familia.pl  familia.py  familia_solucion.pl
logica/starcraft/: starcraft.pl  starcraft_o1.pl
pacman/: grafo.py  pacman.py  search.py  state.py
patch/: director.py
perceptron/: perceptron.py  perceptron_skl.py  revision.xlsx
planning/: build.sh  dockerfile  run.bat  run.sh
planning/colin2/: README  README.md  build-debug  build-release  build-static  plan  rp.pl  rp_exists  run-cmake-debug  run-cmake-for-cplex-static-x86  run-cmake-release  run-cmake-static
planning/colin2/src/: CMakeLists.txt
planning/colin2/src/VALfiles/: Plan.cpp  Proposition.h  SimpleEval.h  State.cpp  TypeStripWC.cpp  TypedAnalyser.h  TypedAnalyser.h~
planning/colin2/src/VALfiles/parsing/: pddl+.yacc
planning/colin2/src/colin/: 2  CMakeLists.txt  FFEvent.cpp  FFEvent.h  FFSolver.cpp  FFSolver.h  RPGBuilder.cpp  RPGBuilder.h  RPGBuilderAnalysis.cpp  RPGBuilderEvaluation.cpp  RPGBuilderNumerics.cpp  StochasticDurations.cpp  StochasticDurations.h  colinMain.cpp  colintotalordertransformer.cpp  colintotalordertransformer.h  colours.h  compressionsafescheduler.cpp  compressionsafescheduler.h  globals.cpp  globals.h  gplhead  lpscheduler.cpp  lpscheduler.h  minimalstate.cpp  minimalstate.h  numericanalysis.cpp  numericanalysis.h  partialordertransformer.cpp  partialordertransformer.h  solver-both.cpp  solver-both.h  solver-clp.cpp  solver-clp.h  solver-cpx-paramils.cpp  solver-cpx.cpp  solver-cpx.h  solver.cpp  solver.h  temporalanalysis.cpp  (+5 more)
planning/domains/drone/: domain.pddl  problem.pddl
planning/domains/logistica/: domain.pddl  problem.pddl
planning/domains/spare/: domain.pddl  problem.pddl  problem.plan  spare.pl
planning/domains/starcraft-r/: domain.pddl  problem.pddl
planning/domains/starcraft-rt/: domain.pddl  plan.sh  problem.pddl  problem.plan
planning/lisp/: ejemplo.lisp
planning/optic/: README  build-debug  build-release  build-static  plan_startcarft.sh  run-cmake-debug  run-cmake-for-cplex-debug-x86  run-cmake-for-cplex-static-x86  run-cmake-release  run-cmake-static  setup.sh
planning/optic/src/: CMakeLists.txt
planning/optic/src/VALfiles/: CMakeLists.txt  RelaxTranslator.cpp  SimpleEval.cpp  Validator.cpp  instantiation.cpp  oldFlexLexer.h
planning/optic/src/VALfiles/misc/: LPGPTranslator.cpp
planning/optic/src/VALfiles/parsing/: ptree.h
planning/optic/src/cmake/modules/: FindGSL.cmake  FindOSI.cmake
planning/optic/src/optic/: CMakeLists.txt  FFEvent.cpp  FFEvent.h  FFSolver.cpp  FFSolver.h  NNF.cpp  NNF.h  PreferenceData.h  PreferenceHandler.cpp  PreferenceHandler.h  RPGBuilder.cpp  RPGBuilder.h  RPGBuilderAnalysis.cpp  RPGBuilderEvaluation.cpp  RPGBuilderNumerics.cpp  StochasticDurations.cpp  StochasticDurations.h  choosepreconditions.cpp  choosepreconditions.h  colintotalordertransformer.cpp  colintotalordertransformer.h  colours.h  compressionsafescheduler.cpp  compressionsafescheduler.h  globals.cpp  globals.h  lpscheduler.cpp  lpscheduler.h  minimalstate.cpp  minimalstate.h  numericanalysis.cpp  numericanalysis.h  opticMain.cpp  partialordertransformer.cpp  partialordertransformer.h  solver-both.cpp  solver-both.h  solver-clp.cpp  solver-clp.h  solver-cpx-paramils.cpp  (+10 more)
planning/popf/: README.md
planning/popf/src/VALfiles/: Action.cpp  Polynomial.cpp  Proposition.cpp  Validator.cpp
planning/popf2/: README.md  build  plan  questionnaire.txt
planning/popf2/src/: CMakeLists.txt
planning/popf2/src/VALfiles/: Action.h  Plan.h  SimpleEval.cpp  Validator.cpp  instantiation.cpp  typecheck.h
planning/popf2/src/VALfiles/misc/: DYNATranslator.cpp
planning/popf2/src/popf2/: CMakeLists.txt  FFEvent.cpp  FFEvent.h  FFSolver.cpp  FFSolver.h  RPGBuilder.cpp  RPGBuilder.h  RPGBuilderAnalysis.cpp  RPGBuilderEvaluation.cpp  RPGBuilderNumerics.cpp  globals.cpp  globals.h  lpscheduler.cpp  lpscheduler.h  minimalstate.cpp  minimalstate.h  numericanalysis.cpp  numericanalysis.h  partialordertransformer.cpp  popfMain.cpp  solver-clp.cpp  temporalconstraints.cpp  temporalconstraints.h
tarea1/: CINF103 Tarea1 202220.docx
tarea2/: CINF103 Tarea2 202220.docx
